kubernetes/letsencrpyt/nginx-ingress-letsencrypt.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  # namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
   - secretName: letsencrypt-cert-tls
     hosts:
     -  host1
     -  host2
  rules:
   - host: host1
     http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
